--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,18 @@ div.header{
 }
 
 div.content{
-    padding:10px;
+    padding:0px 10px;
 }
 
+div.banner {
+  padding:0px;
+  margin:0px;
+  border: solid 0px;
+}
+
+div {
+  border: solid 0px;
+}
 
 ul.menu {
   list-style-type: none;
