--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,18 @@ body{
   margin:0px;
   padding:0px;
   max-width:800px;
-  vertical-align: middle;
   display: table-cell;
 }
 
 div.header{
   border: solid 0px;
-  overflow: auto;
+  overflow: hidden;
   min-width: 200px;
 }
 
 .header img {
+  display: inline;
+  position: relative;
   float: left;
   width: 100px;
   height: 100px;
@@ -25,10 +26,35 @@ div.header{
 }
 
 .header h1 {
+  display: inline;
   position: relative;
-  max-width:400px;
+  float: left;
+  max-width:300px;
   border: solid 0px;
   margin: 15px 0px;
+}
+
+/* Take action */
+a.TakeAction
+{
+  display: inline;
+  position: relative;
+  color: black;
+  background-color:Gold;
+  size: big;
+  float: right;
+  text-align: center;
+  padding: 14px 16px;
+  margin: 30px 20px;
+  font-size: large;
+  vertical-align: middle;
+  text-decoration: none;
+  border: solid 0px;
+  
+}
+a.TakeAction:hover{
+background-color: #999;
+color: white;
 }
 
 div.content{
@@ -161,3 +187,24 @@ ul.menu li a:hover {
   from {opacity: .4}
   to {opacity: 1}
 }
+
+
+
+/* CSS for the footer */
+.footer {
+    position: relative;
+    bottom: 0px;
+    max-width:800px;
+    background-color: grey;
+    border: solid 0px;
+    margin: 40px 0px 0px 0px;
+    padding: 0px;
+    height: 110px;
+}
+
+.footer p {
+    padding: 30px 0px 0px 20px;
+    width: 400px;
+    color: white;
+}
+
