--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
+/* Attempted to use CSS variables, but they don't work */
+:root {
+  --bottomBannerHeight: 110px;
+}
+
 html {
   display: table;
   margin: auto;
+  /* height 100% is needed for the bottom banner to be at the bottom */
+  height: 100%;
 }
 
 body{
@@ -8,6 +15,10 @@ body{
   padding:0px;
   max-width:800px;
   display: table-cell;
+  border: solid 0px;
+  /* min-height 100% and Position relative is needed for the bottom banner to be at the bottom */
+  min-height: 100%;
+  position: relative;
 }
 
 div.header{
@@ -58,7 +69,8 @@ color: white;
 }
 
 div.content{
-    padding:0px 10px;
+    /* Set third paramtert to bottomBannerHeight when CSS variables are working */
+    padding:0px 10px 110px 10px;
 }
 
 div.banner {
@@ -192,18 +204,23 @@ ul.menu li a:hover {
 
 /* CSS for the footer */
 .footer {
-    position: relative;
-    bottom: 0px;
-    max-width:800px;
-    background-color: grey;
     border: solid 0px;
+    
+    /*Position absolute and bottom are needed to put the banner at the bottom*/
+    position: absolute;
+    bottom: 0px;
+    
+    max-width:800px;
+    min-width: 100%;
+    background-color: grey;
     margin: 40px 0px 0px 0px;
     padding: 0px;
+    /* set height to bottomBannerHeight variable when CSS variables are working */
     height: 110px;
 }
 
 .footer p {
-    padding: 30px 0px 0px 20px;
+    padding: 10px 0px 0px 20px;
     width: 400px;
     color: white;
 }
